--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -7,16 +7,20 @@
     grid-template-columns: auto 200px;
     grid-template-rows: auto;
     grid-template-areas:
-        ". tag"
-        "text"
+        "title tag"
+        "text text";
 }
 
 h1 {
     padding-left: 17px;
 }
 
+.title {
+    grid-area: title;
+}
+
 .text {
-    grid-area: "text";
+    grid-area: text;
 }
 
 .story:hover {
@@ -24,38 +28,29 @@ h1 {
     cursor: pointer;
 }
 
-.Historical.Fiction {
-    grid-area: "tag";
-    border: 1px solid lightblue;
+.tag {
     width: fit-content;
-    background-color: lightblue;
+    grid-area: tag;
     padding: 5px;
     border-radius: 10px;
+}
+
+.Historical.Fiction {
+    border: 1px solid lightblue;
+    background-color: lightblue;
 }
 
 .Romance {
     border: 1px solid pink;
     background-color:pink;
-    width: fit-content;
-    padding: 5px;
-    border-radius: 10px;
-    grid-area: "tag";
 }
 
 .Science.Fiction {
-    border: 1px solid green;
-    background-color: green;
-    width: fit-content;
-    padding: 5px;
-    border-radius: 10px;
-    grid-area: "tag";
+    border: 1px solid lightgreen;
+    background-color: lightgreen;
 }
 
 .Mystery {
-    border: 1px solid purple;
-    background-color: purple;
-    width: fit-content;
-    padding: 5px;
-    border-radius: 10px;
-    grid-area: "tag";
+    border: 1px solid lightcoral;
+    background-color: lightcoral;
 }
