--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,10 +1,23 @@
-.nav-bar {
-    width: 100vw;
-    height: 70px;
-    display: flex;
+.navigation button {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    margin: 0px 10px;
+    padding: 8px 10px;
+    border: none;
+    border-radius: 5px;
 }
 
-.navigation{
-    justify-content: flex-end;
-    width:49%;
+.navigation button:hover {
+    cursor: pointer;
+    font-weight: bold;
+    background-color: rgb(200, 200, 200);
+    transition: ease-in-out 0.3s;
+}
+
+@media screen and (max-width: 750px) {
+    .navigation button {
+        font-size: 14px;
+        margin: 0px 5px;
+        padding: 4px 5px;
+    }
 }
