--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@
   justify-content: flex-end;
   align-items: center;
   padding: 20px 5%;
+
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .pageTitle {
