--- a/src/components/Contribute.css
+++ b/src/components/Contribute.css
@@ -1,7 +1,7 @@
 .contribute textarea{
     margin: auto;
-    margin-top: 10px;
-    padding-left: 10px;
+    margin-top: 15px;
+    padding: 10px;
     width: 75%;
     height: 400px
 }
@@ -27,7 +27,7 @@
 }
 
 .story-text {
-    width: 75%;
+    width: 85%;
     margin: auto;
     padding: 10px;
 }
@@ -36,6 +36,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.story-text-full {
+    font-size: 20px;
 }
 
 .title {
