small stylistic fix, fixed cypress test, trying to fix CI

--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -9,8 +9,8 @@
 
 .navigation button:hover {
     cursor: pointer;
-    font-weight: bold;
-    background-color: rgb(200, 200, 200);
+    font-weight: bold !important;
+    background-color: rgb(200, 200, 200) !important;
     transition: ease-in-out 0.3s;
 }
 
