--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,15 @@
     padding: 0;
 }
 
+body {
+  background-color: #E5E9Ec;
+}
+
 .nav-bar {
   font-family: "Montserrat", sans-serif;
 
   width: 100vw;
-  height: 70px;
-  display: flex;
+  height: 100px;
 
   font-weight: bold;
   font-size: 16px;
@@ -22,8 +25,11 @@
   align-items: center;
   padding: 20px 5%;
 
-  margin-top: 20px;
   margin-bottom: 30px;
+}
+
+.nav-bar, .navigation, header {
+  background-color: #D1B1CB;
 }
 
 .pageTitle {
