--- a/src/components/Contribute.css
+++ b/src/components/Contribute.css
@@ -18,11 +18,13 @@
     padding: 8px 10px;
     border: none;
     border-radius: 5px;
+    background-color: #58504A;
+    color: #E5E9Ec;
 }
 
 .input button:hover {
     cursor: pointer;
-    background-color: rgb(200, 200, 200);
+    background-color: #2C2825;
     transition: ease-in-out 0.3s;
 }
 
