logo and style fix
- added logo
- added number of contributors
- style fix to genre and number of contributors

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -2,6 +2,18 @@
     margin-right: auto;
     font-weight: bold;
     font-size: 30px;
+    display:flex;
+    align-items: center;
+}
+
+.logo {
+    float:left;
+    width:75px;
+    color: inherit;
+}
+
+.banner-text {
+    float:right;
     text-decoration: none;
     color: inherit;
 }
