--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -3,5 +3,5 @@
     font-weight: bold;
     font-size: 30px;
     text-decoration: none;
-    background-color: #D1B1CB;
+    background-color: #b1b6d1;
 }
