--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -1,12 +1,12 @@
 .story {
-    border: 2px solid #DDCAD9;
+    border: 2px solid #cad1dd;
     border-radius: 15px;
     margin: 15px 5%;
     padding: 15px;
     padding-top: 0px;
     display: flex;
     flex-direction: column;
-    background-color: #DDCAD9;
+    background-color: #cad1dd;
 }
 
 .story > p {
@@ -33,10 +33,10 @@ h2 {
 }
 
 .story:hover {
-    background-color: #D1B1CB;
+    background-color: #b1b6d1;
     cursor: pointer;
     transition: ease-in 0.2s;
-    border-color: #D1B1CB;
+    border-color: #b1b6d1;
 }
 
 .tag {
