--- a/src/components/Create.css
+++ b/src/components/Create.css
@@ -9,6 +9,14 @@
 .num_contributors{
     margin-bottom: 15px;
 }
+.name textarea{
+    resize:none;
+    margin: auto;
+    margin-bottom: 15px;
+    padding: 10px;
+    width: 100%;
+    height: 40px
+}
 .title textarea{
     resize:none;
     margin: auto;
