--- a/src/components/Contribute.css
+++ b/src/components/Contribute.css
@@ -1,13 +1,43 @@
-.contribute textarea{
+.name textarea{
     resize:none;
     margin: auto;
-    margin-top: 15px;
+    margin-bottom: 15px;
     padding: 10px;
-    width: 75%;
-    height: 400px
+    width: 100%;
+    height: 40px
 }
 
-.input {
+.article textarea{
+    resize:none;
+    margin: auto;
+    /* margin-top: 15px; */
+    padding: 10px;
+    width: 100%;
+    height: 400px
+}
+.story-text{
+    width: 85%;
+    margin: auto;
+    padding: 10px;
+}
+
+.inputText{
+    width: 85%;
+    margin: auto;
+    padding: 10px;
+}
+
+.td-1{
+    vertical-align:top;
+    width:20%;
+} 
+.td-2{
+    vertical-align:top;
+    width:70%;
+
+} 
+
+.btn{
     text-align: center;
 }
 
